# C-compiler-project

./: CMakeLists.txt  main.c
c-lex/: Symbol.h
c-parser/: parser.c  parser.h  shift_reduce_parser.c
c-parser/design/: grammar.txt
include/: base.h
src/: main.c  program.txt
src/c-lex/: README.md  Scanner.c  Scanner.h  grammar.txt  keywords.c  keywords.h  lexer.c  lexer.h  scanner.c  token.c  token.h
src/c-lex/test/: program.txt  program1.txt  test.c
